Added first question in javascript

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       </ul>
     </div>
     <script type="text/javascript">
-      var question = ("How are you feeling today?");
-      var response = prompt(question);
-      alert('You are feeling ' + response + ' today!');
+      var firstQuestion = ("Where am I from?"); //Creates the firstQuestion variable which is the question that will be asked.
+      var firstAnswer = prompt(firstQuestion); //Creates the firstAnswer variable that equals the answer to the firstQuestion.
+      var homeTown = ("redmond"); //Creates the homeTown variable that will be compared to firstAnswer.
     </script>
   </body>
 </html>
