Added the if/else statement to the first question.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
       var firstQuestion = ("Where am I from?"); //Creates the firstQuestion variable which is the question that will be asked.
       var firstAnswer = prompt(firstQuestion); //Creates the firstAnswer variable that equals the answer to the firstQuestion.
       var homeTown = ("redmond"); //Creates the homeTown variable that will be compared to firstAnswer.
+
+      if (homeTown === firstAnswer){
+        alert("Great job! That's the right answer.");
+      }else{
+        alert("Sorry, that is not the correct answer.");
+      };
     </script>
   </body>
 </html>
