--- a/index.html
+++ b/index.html
@@ -59,17 +59,21 @@
         alert("Sorry, that is not the correct answer.");//Message that will displayed when an incorrect answer is given.
       };
 
-      var secondQuestion = ("What is one of my goals?");
-      var secondAnswer = prompt(secondQuestion);
+      var secondQuestion = ("What is one of my goals?");//Creates the secondQuestion variable which is the second question to be asked.
+      var secondAnswer = prompt(secondQuestion);//Causes the second question to appear on screen and saves the user input to secondAnswer.
       var goalOne = ("learn a new skill");
       var goalTwo = ("find better employment");
       var goalThree = ("improve life style");
-
       if (secondAnswer === goalOne){ //Is only working for goalOne
         alert("Yup! '" + secondAnswer + "' is one of my goals.");
+      }else if (secondAnswer === goalTwo){
+        alert("Cool! '" + secondAnswer + " ' is one of my goals.");
+      }else if (secondAnswer === goalThree){
+        alert("Right on! '" + secondAnswer + " ' is one of my goals.");
       }else{
         alert("Oh no! It looks like '" + secondAnswer + "' is not one of my goals.");
       };
+
 
 
     </script>
