Cleaned up html tags. Put tags <p></p> and such on same line.

--- a/index.html
+++ b/index.html
@@ -4,42 +4,29 @@
     <title>Geoffrey Cox</title>
   </head>
   <body>
+    <header>
+      <h1>Geoffrey C Cox</h1>
+    </header>
     <div>
-      <h1>
-        Geoffrey C Cox
-      </h1>
+      <h2>Biography</h2>
+      <p>I was born in Redmond, Washington in 1986. I completed my AA degree at Bellevue College. I dropped out of a BFA program for computer graphics at Academy of Art University in San Francisco. I have worked as a game tester at Nintendo since returning to Washington. I enjoy drawing and painting in my free time. I also play tabletop games.</p>
     </div>
     <div>
-      <h2>
-        Biography
-      </h2>
-      <p>
-        I was born in Redmond, Washington in 1986. I completed my AA degree at Bellevue College. I dropped out of a BFA program for computer graphics at Academy of Art University in San Francisco. I have worked as a game tester at Nintendo since returning to Washington.
-        I enjoy drawing and painting in my free time. I also play tabletop games.
-      </p>
-    </div>
-    <div>
-      <h2>
-        Experience
-      </h2>
+      <h2>Experience</h2>
       <ul>
         <li>Nintendo Associate product tester</li>
         <li>Nintendo Associate product tester II</li>
       </ul>
     </div>
     <div>
-      <h2>
-        Education
-      </h2>
+      <h2>Education</h2>
       <ul>
         <li>Bellevue College</li>
         <li>Academy of Art University</li>
       </ul>
     </div>
     <div>
-      <h2>
-        Goals
-      </h2>
+      <h2>Goals</h2>
       <ul>
         <li>Learn a new skill.</li>
         <li>Find better employment</li>
