--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
         alert("Only 'yes' and 'no' are accepted for this question.");
       };
 
+      var yesNoThree = ("Is painting one of my hobbies?");
+      var yesNoAnswerThree = prompt(yesNoThree);
+      console.log("yesNoAnswerThree is " + yesNoAnswerThree);
+      if (yesNoAnswerThree === "yes"){
+        alert("That's right " + userName + " it sure is.");
+      }else if (yesNoAnswerThree === "no"){
+        alert("Actually it is one of my hobbies.");
+      }else{
+        alert("Sorry only 'yes' and 'no' are recognized.");
+      };
+
 
 
 
