--- a/index.html
+++ b/index.html
@@ -37,12 +37,10 @@
   </main>
     <script type="text/javascript">
 
-      var whatName = ("What is your name?");//creates the variable whatName with the value of "What is your name?"
-      var userName = prompt(whatName);//creates the variable userName which will store the user input from the whatName question.
+      var userName = prompt("What is your name?");//creates the variable userName which will store the user input from the question.
       console.log("userName is " + userName);//displays in the developer console what the user input was.
 
-      var yesNoOne = (userName + ", am I from Washington?");//creates the yesNoOne which has a value of the user's name combined with a string.
-      var yesNoAnswerOne = prompt(yesNoOne);//creates the variable yesNoAnswerOne which will prompt the above question and store the user input.
+      var yesNoAnswerOne = prompt(userName + ", am I from Washington?");//creates the variable which will prompt the question and store the user input.
       console.log("yesNoAnserOne is " + yesNoAnswerOne);//displays in the developer console what the user input was.
       if (yesNoAnswerOne === "yes"){//compares the user input to the string yes.
         alert("Great job " + userName + "!");//If the above statement is true this string will be displayed.
@@ -52,8 +50,7 @@
         alert("I'm sorry. The only accepted answers are 'yes' and 'no'.");//will be displayed when the above is true.
       };
 
-      var yesNoTwo = (userName + ", did I work at Sega?");//creates the variable yesNoTwo which equals a question that includes the userName.
-      var yesNoAnswerTwo = prompt(yesNoTwo);//creates the variable yesNoAnswerTwo which prompts the above question and stores the answer in yesNoAnswerTwo.
+      var yesNoAnswerTwo = prompt(userName + ", did I work at Sega?");//creates the variable yesNoAnswerTwo which prompts the question and stores the answer in yesNoAnswerTwo.
       console.log("yesNoAnswerTwo is " + yesNoAnswerTwo);//displays the value of yesNoAnswerTwo in the console.
       if (yesNoAnswerTwo === "no"){//compares the user input to no
         alert("That is correct " + userName + ".");//if the above statement is true this string will display.
@@ -63,8 +60,7 @@
         alert("Only 'yes' and 'no' are accepted for this question.");//displays when the above is ture.
       };
 
-      var yesNoThree = ("Is painting one of my hobbies?");//creates the variable yesNoThree which has Is painting one of my hobbies? as it's value.
-      var yesNoAnswerThree = prompt(yesNoThree);//creates the variable yesNoAnswerThree which will prompt the above question and store the user's answer.
+      var yesNoAnswerThree = prompt("Is painting one of my hobbies?");//creates the variable yesNoAnswerThree, prompts the question and stores the answer in the variable.
       console.log("yesNoAnswerThree is " + yesNoAnswerThree);//displays in the value of yesNoAnswerThree in the console.
       if (yesNoAnswerThree === "yes"){//compares the user input to yes.
         alert("That's right " + userName + " it sure is.");//if the above is true this string will display.
@@ -74,8 +70,7 @@
         alert("Sorry only 'yes' and 'no' are recognized.");//this string displays if the above is true.
       };
 
-      var fourthQuestion = ("How old am I?");//Creates the variable fourthQuestion which equals "How old am I?"
-      var age = prompt(fourthQuestion);//Prompts the fourtQuestion. The user input will equal age.
+      var age = prompt("How old am I?");//Prompts the question. The user input will equal age.
       if (age === '29'){//Compares user input and 29.
         alert("That's right I am " + age + " years old.");//If the above user input is true this message will be displayed.
       }else if (age < '29'){//Checks to see if the user input is less than 29.
