--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
       var userName = prompt("What is your name?");//creates the variable userName which will store the user input from the question.
       console.log("userName is " + userName);//displays in the developer console what the user input was.
 
-      var yesNoAnswerOne = prompt(userName + ", am I from Washington?");//creates the variable which will prompt the question and store the user input.
-      console.log("yesNoAnserOne is " + yesNoAnswerOne);//displays in the developer console what the user input was.
-      if (yesNoAnswerOne === "yes"){//compares the user input to the string yes.
+      var answerOne = prompt(userName + ", am I from Washington?");//creates the variable which will prompt the question and store the user input.
+      console.log("answerOne is " + answerOne);//displays in the developer console what the user input was.
+      if (answerOne === "yes"){//compares the user input to the string yes.
         alert("Great job " + userName + "!");//If the above statement is true this string will be displayed.
-      }else if (yesNoAnswerOne === "no"){//compares the user input to the string no.
+      }else if (answerOne === "no"){//compares the user input to the string no.
         alert("Sorry " + userName + " that is incorrect.");//If the above statement is true this string will be displayed.
       }else{//If the user input not 'yes' or 'no' this will run.
         alert("I'm sorry. The only accepted answers are 'yes' and 'no'.");//will be displayed when the above is true.
       };
 
-      var yesNoAnswerTwo = prompt(userName + ", did I work at Sega?");//creates the variable yesNoAnswerTwo which prompts the question and stores the answer in yesNoAnswerTwo.
-      console.log("yesNoAnswerTwo is " + yesNoAnswerTwo);//displays the value of yesNoAnswerTwo in the console.
-      if (yesNoAnswerTwo === "no"){//compares the user input to no
+      var answerTwo = prompt(userName + ", did I work at Sega?");//creates the variable answerTwo which prompts the question and stores the answer in yesNoAnswerTwo.
+      console.log("answerTwo is " + answerTwo);//displays the value of answerTwo in the console.
+      if (answerTwo === "no"){//compares the user input to no
         alert("That is correct " + userName + ".");//if the above statement is true this string will display.
-      }else if (yesNoAnswerTwo === "yes"){//compares the user input to yes.
+      }else if (answerTwo === "yes"){//compares the user input to yes.
         alert("I did not work at sega.");//if the above statement is true this string will display.
       }else{//if the user input is not yes or no this will run.
         alert("Only 'yes' and 'no' are accepted for this question.");//displays when the above is ture.
       };
 
-      var yesNoAnswerThree = prompt("Is painting one of my hobbies?");//creates the variable yesNoAnswerThree, prompts the question and stores the answer in the variable.
-      console.log("yesNoAnswerThree is " + yesNoAnswerThree);//displays in the value of yesNoAnswerThree in the console.
-      if (yesNoAnswerThree === "yes"){//compares the user input to yes.
+      var answerThree = prompt("Is painting one of my hobbies?");//creates the variable answerThree, prompts the question and stores the answer in the variable.
+      console.log("answerThree is " + answerThree);//displays in the value of answerThree in the console.
+      if (answerThree === "yes"){//compares the user input to yes.
         alert("That's right " + userName + " it sure is.");//if the above is true this string will display.
-      }else if (yesNoAnswerThree === "no"){//compares the user input to no.
+      }else if (answerThree === "no"){//compares the user input to no.
         alert("Actually it is one of my hobbies.");//if the above is true this string will display.
       }else{//if the answer is not yes and is also not no this will run.
         alert("Sorry only 'yes' and 'no' are recognized.");//this string displays if the above is true.
