added console.log for age.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       };
 
       var age = prompt("How old am I?");//Prompts the question. The user input will equal age.
+      console.log("age is " +age);//displays the user input in the console.
       if (age === '29'){//Compares user input and 29.
         alert("That's right I am " + age + " years old.");//If the above user input is true this message will be displayed.
       }else if (age < '29'){//Checks to see if the user input is less than 29.
