Trying to add number qeustions to function and failing.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
         </ul>
       </article>
     </main>
+    <section>
+      <p>Am I from washington?</p>
+      <p id="one"></p>
+      <p>Did I work at Sega?</p>
+      <p id="two"></p>
+      <p>Is painting one of my hobbies?</p>
+      <p id="three"></p>
+      <p id="four"></p>
+      <p id="five"></p>
+      <p id="score"></p>
+    </section>
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
