--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     </main>
     <section>
       <p>Am I from washington?</p>
-      <p id="one"></p>
+      <p id="qOne"></p>
       <p>Did I work at Sega?</p>
-      <p id="two"></p>
+      <p id="qTwo"></p>
       <p>Is painting one of my hobbies?</p>
-      <p id="three"></p>
-      <p id="four"></p>
-      <p id="five"></p>
+      <p id="qThree"></p>
+      <p id="qFour"></p>
+      <p id="qFive"></p>
       <p id="score"></p>
     </section>
     <script src="app.js" type="text/javascript"></script>
