--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Geoffrey Cox</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
@@ -36,15 +37,17 @@
       </article>
     </main>
     <section>
-      <p>Am I from washington?</p>
+      <p class="question">Am I from washington?</p>
       <p id="qOne"></p>
-      <p>Did I work at Sega?</p>
+      <p class="question">Did I work at Sega?</p>
       <p id="qTwo"></p>
-      <p>Is painting one of my hobbies?</p>
+      <p class="question">Is painting one of my hobbies?</p>
       <p id="qThree"></p>
+      <p class="question">Guess my age!</p>
       <p id="qFour"></p>
+      <p class="question">What is one of my favorite colors?</p>
       <p id="qFive"></p>
-      <p id="score"></p>
+      <p id="numCorr"></p>
     </section>
     <script src="app.js" type="text/javascript"></script>
   </body>
