Added images to answers.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <p class="question">What is one of my favorite colors?</p>
       <p id="qFive"></p>
       <p id="numCorr"></p>
+      <div id ='img'></div>
     </section>
     <footer>
       <div id="author">
